<resources>
    <string name="app_name">Lab12</string>
    <string name="EURO">EURO</string>
    <string name="PLN">PLN</string>
    <string name="USD">USD</string>
    <string name="CHF">CHF</string>
    <string name="convert">Convert</string>
    <string name="zero">0.00%</string>
    <string-array name="currencies">
        <item>PLN</item>
        <item>EURO</item>
        <item>USD</item>
        <item>CHF</item>
    </string-array>
</resources>