<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/euro_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EURO"
        app:layout_constraintBottom_toTopOf="@+id/pln_name"
        app:layout_constraintEnd_toStartOf="@+id/euro_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/euro_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/pln_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/euro_name"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/pln_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PLN"
        app:layout_constraintBottom_toTopOf="@+id/usd_name"
        app:layout_constraintEnd_toStartOf="@+id/pln_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/euro_name" />

    <EditText
        android:id="@+id/pln_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/usd_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pln_name"
        app:layout_constraintTop_toBottomOf="@+id/euro_value"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/usd_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/USD"
        app:layout_constraintBottom_toTopOf="@+id/chf_name"
        app:layout_constraintEnd_toStartOf="@+id/usd_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pln_name" />

    <EditText
        android:id="@+id/usd_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/chf_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/usd_name"
        app:layout_constraintTop_toBottomOf="@+id/pln_value"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/chf_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CHF"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        app:layout_constraintEnd_toStartOf="@+id/chf_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usd_name" />

    <EditText
        android:id="@+id/chf_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/chf_name"
        app:layout_constraintTop_toBottomOf="@+id/usd_value"
        tools:ignore="SpeakableTextPresentCheck" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chf_value"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/convert"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sum"
        app:layout_constraintStart_toEndOf="@+id/spinner"
        app:layout_constraintTop_toBottomOf="@+id/chf_value" />

    <TextView
        android:id="@+id/sum"
        android:layout_width="0dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/chf_value" />

</androidx.constraintlayout.widget.ConstraintLayout>